# CSA-parallel-PIR

./: CSA.java  README.md
BitcoinDataset/: APIException.java  Block.java  BlockAtHeight.java  BlockChainApi.java  HttpClient.java  HttpClientImpl.java  Input.java  LatestBlock.java  MainBitcoinAPI.java  MainDatasets.java  MerkleTrees.java  Output.java  README.md  Transaction.java  Util.java
BitcoinDataset/Datasets/: PBC10_10.json  PBC11_10.json  PBC12_10.json  PBC13_10.json  PBC14_10.json  PBC15_10.json  PBC1_10.json  PBC2_10.json  PBC3_10.json  PBC4_10.json  PBC5_10.json  PBC6_10.json  PBC7_10.json  PBC8_10.json  PBC9_10.json  colorA_10.json  colorB_10.json  colorC_10.json  colorD_10.json  colorE_10.json  colorF_10.json  colorG_10.json  colorH_10.json  colorI_10.json  colorJ_10.json  layer10_10.json  layer1_10.json  layer2_10.json  layer3_10.json  layer4_10.json  layer5_10.json  layer6_10.json  layer7_10.json  layer8_10.json  layer9_10.json  proofAsElement_10.json  wholeTree_10.json
CSA/: README.md  figureCSA.py  outputCSA.txt
Parallel-PIR/DPPIR-Coloring/: README.md
graphs/: coloringBased_Client.txt  coloringBased_Servers.txt  dpPIR.txt  dpPIRcoloring.txt  figurePIR.py  hRepetition_Client.txt  hRepetition_Servers.txt  layerBased_Client.txt  layerBased_Servers.txt  pbc_Client.txt  pbc_Servers.txt  proofAsElement_Client.txt  proofAsElement_Servers.txt
parallel-PIR/: CMakeLists.txt  README.md  main.cpp  pir_client.cpp  pir_server.cpp
parallel-PIR/graphs/: figure.py  figurePIR.py  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt
(+19 files in other folders)
